--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rust-version = "1.66"
 [dependencies]
 egui = "0.19.0"
 eframe = { version = "0.19.0", features = ["persistence"] }
+egui_web = "0.17.0"
 
 eval = "0.4.3"
 to_string = "0.1.0"
@@ -26,6 +27,7 @@ tracing-subscriber = "0.3"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
+serde = "1.0.147"
 
 
 [profile.release]
